<resources>
    <!-- connection page -->
    <string name="connection">Connection</string>
    <string name="email">xxxxxx@example.com</string>
    <string name="emailError">Please set a valid email address</string>
    <string name="password">Your password</string>
    <string name="passwordError">Please set a valid password</string>
    <string name="login">Connect</string>
    <string name="login_page">Login page</string>
    <string name="dont_have_account">If you don\'t have an account, you can create it to access to the plant management platform</string>

    <!-- general -->
    <string name="app_name">Plant Care</string>
    <string name="skip">skip</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="validate">Validate</string>
    <string name="action_settings">Settings</string>
    <string name="title">Welcome</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_location_permission">Position</string>
    <string name="text_location_permission">Please allow us to have access to your position. Thanks to that we can propose you the weather forecast.</string>
    <string name="ok">OK</string>

    <!-- inscription  page -->
    <string name="birthdayDate">Birth Day</string>
    <string name="lastname">Your lastname</string>
    <string name="lastnameT">Lastname</string>
    <string name="your_name">Your name</string>
    <string name="firstname">Fistname</string>
    <string name="woman">Women </string>
    <string name="womanShort">F</string>
    <string name="man">Men </string>
    <string name="manShort">M</string>
    <string name="inscription">Inscription</string>
    <string name="create">Create account</string>
    <string name="have_account">If you have an account, go to login page</string>

    <string name="welcome">Plant management platform</string>
    <string name="plant">My plant</string>
    <string name="weather">Weather</string>
    <string name="weather_description">The weather</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="idPlant">1</string>
    <string name="plantName">Plant Name</string>
    <string name="Water">Water </string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="see">See</string>

    <string name="plant_info">Plant Information</string>
    <string name="plant_name">Name</string>
    <string name="plant_name_hint">Plant Name </string>
    <string name="outside">Plant is outside</string>
    <string name="temperature">Temperature (°C)</string>
    <string name="quatity">Quantity (L)</string>
    <string name="humidity">Humidity </string>
    <string name="min">Min: </string>
    <string name="max">Max: </string>
    <string name="degres"> °C</string>
    <string name="litre">L</string>
    <string name="number_hint">0.0</string>
    <string name="icons">Icons significations</string>
    <string name="average">Average: </string>
    <string name="noPlant">You don\'t have any plant.</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city">City</string>
    <string name="city_name">Your city name</string>
    <string name="wind_km_h">wind(km/h) :</string>
    <string name="km_h">km/h</string>
    <string name="percent">%</string>
    <string name="delete">Delete</string>
    <string name="temp">T (° C)</string>
    <string name="prompt">You can see if a plant with the same characteristic as your, exist already:</string>


</resources>